fixed spacing on submit review and rounded submit corners

--- a/content_css/injected.css
+++ b/content_css/injected.css
@@ -41,6 +41,7 @@ aside div.content {
 .hours input {
   margin-left: 1em;
   margin-right: 1em;
+  margin-bottom: 2em;
 }
 
 .hours input[type="range"] {
@@ -88,7 +89,8 @@ output.submitModalTextOutput {
 }
 
 div.hours {
-  margin: 2em;
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 .hours label {
@@ -101,6 +103,7 @@ div.hours {
   text-transform: uppercase;
   letter-spacing: 0.05em;
   font-weight: 600;
+  margin-bottom: 0em; 
 }
 
 .hours .star{
@@ -149,6 +152,7 @@ div.hours {
   display:inline;
   color:#E8A552;
   font-size:18px;
+  margin-left: 2.5em;
 }
 
 /*submit review modal css*/
@@ -330,8 +334,15 @@ label.pageTag {
 }
 
 .questionEntry{
-  margin: 3em;
+  margin-left: 3em;
+  margin-right: 3em;
+  margin-top: 1em; 
+  margin-bottom: 2em;
+}
+.sliderEnter{
+  margin-left: 3em;
   margin-top: 0em;
+  margin-bottom: 0em;
 }
 
 #majorEntry{
@@ -340,10 +351,10 @@ label.pageTag {
 .boxes{
    border-radius: 25px; 
 }
-.textarea{
-  border-radius: !15px;
+.submissionForm textarea{
+  border-radius: 5px;
 }
 #tagChoices{
   margin: 3em;
-  margin-top: 0em;
+  margin-top: 1em;
 }
